# caliberate

./: .gitignore  Cargo.toml  README.md
config/: control-plane.toml
crates/app/: Cargo.toml
crates/app/src/: bootstrap.rs  cli.rs  error.rs  main.rs
crates/app/tests/: bootstrap.rs  cli.rs
crates/assets/: Cargo.toml
crates/assets/src/: compression.rs  hashing.rs  lib.rs  policy.rs  stats.rs  storage.rs
crates/assets/tests/: compression.rs  integrity.rs  stats_compaction.rs
crates/conversion/: Cargo.toml
crates/conversion/src/: formats.rs  jobs.rs  lib.rs  pipeline.rs  settings.rs
crates/conversion/tests/: conversion.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  paths.rs
crates/core/tests/: config_smoke.rs
crates/core/tests/fixtures/: control-plane.toml
crates/db/: Cargo.toml
crates/db/src/: database.rs  lib.rs
crates/db/src/backend/: mod.rs  sqlite.rs
crates/db/src/cache/: mod.rs
crates/db/src/migrations/: mod.rs
crates/db/src/query/: mod.rs
crates/db/src/schema/: mod.rs
crates/db/tests/: books.rs  cache.rs  custom_columns.rs  fts.rs  metadata_extras.rs  metadata_relations.rs  metadata_updates.rs  migrations.rs  notes.rs  preferences.rs  query.rs  schema_parity.rs
crates/device/: Cargo.toml
crates/device/src/: detection.rs  lib.rs  sync.rs
crates/device/tests/: detection.rs  sync.rs
crates/formats/: Cargo.toml
crates/formats/src/: azw.rs  epub.rs  lib.rs  mobi.rs  pdf.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  preferences.rs  views.rs
crates/gui/tests/: smoke.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: ipc.rs  lib.rs  scheduler.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: extract.rs  lib.rs  normalize.rs  online.rs
crates/metadata/tests/: archive_7z.rs  archive_extract.rs  archive_preview.rs  archive_zpaq.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: discovery.rs  lib.rs  registry.rs  sandbox.rs
crates/plugins/tests/: discovery.rs  permissions.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  http.rs  lib.rs  opds.rs
crates/server/tests/: auth.rs  opds.rs
crates/zpaq/: Cargo.toml
crates/zpaq/src/: lib.rs
docs/inventory/: cli.md  conversion.md  db.md  device.md  gui-parity-validation.md  gui.md  ingest.md  plugins.md  server.md  storage.md
docs/roadmaps/: roadmap-assets-storage.md  roadmap-cli.md  roadmap-config.md  roadmap-conversion.md  roadmap-core.md  roadmap-db-metadata.md  roadmap-device-integration.md  roadmap-gui.md  roadmap-implementation.md  roadmap-library-ingest.md  roadmap-plugins.md  roadmap-server.md  roadmap-testing.md
docs/roadmaps/gui/: collections.md  conversion.md  device.md  library.md  metadata.md  news.md  plugins.md  reader.md  settings.md  shell.md
docs/tranches/: tranche-001.md  tranche-002.md  tranche-003.md  tranche-004.md  tranche-005.md  tranche-006.md  tranche-007.md  tranche-008.md  tranche-009.md  tranche-010.md  tranche-011.md  tranche-012.md  tranche-013.md  tranche-014.md  tranche-015.md  tranche-016.md  tranche-017.md  tranche-018.md  tranche-019.md  tranche-020.md  tranche-021.md  tranche-022.md  tranche-023.md  tranche-024.md  tranche-025.md  tranche-026.md  tranche-027.md  tranche-028.md  tranche-029.md  tranche-030.md  tranche-031.md  tranche-032.md  tranche-033.md  tranche-034.md  tranche-035.md  tranche-036.md  tranche-037.md  tranche-038.md  tranche-039.md  tranche-040.md  (+26 more)
