[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/db",
    "crates/library",
    "crates/assets",
    "crates/conversion",
    "crates/server",
    "crates/device",
    "crates/plugins",
    "crates/gui",
    "crates/jobs",
    "crates/metadata",
    "crates/formats",
    "crates/zpaq",
]
resolver = "2"
