[package]
name = "caliberate-app"
version = "0.1.0"
edition = "2024"

[dependencies]
caliberate-core = { path = "../core" }
caliberate-gui = { path = "../gui" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
