[package]
name = "caliberate-app"
version = "0.1.0"
edition = "2024"

[dependencies]
caliberate-core = { path = "../core" }
caliberate-db = { path = "../db" }
caliberate-gui = { path = "../gui" }
caliberate-library = { path = "../library" }
caliberate-assets = { path = "../assets" }
caliberate-server = { path = "../server" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
time = { version = "0.3.47", features = ["formatting"] }
