[package]
name = "caliberate-app"
version = "0.1.0"
edition = "2024"

[dependencies]
caliberate-core = { path = "../core" }
caliberate-db = { path = "../db" }
caliberate-gui = { path = "../gui" }
caliberate-library = { path = "../library" }
caliberate-assets = { path = "../assets" }
caliberate-metadata = { path = "../metadata" }
caliberate-server = { path = "../server" }
caliberate-conversion = { path = "../conversion" }
caliberate-device = { path = "../device" }
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
time = { version = "0.3.47", features = ["formatting"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
urlencoding = "2.1.3"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.138"
csv = "1.3.1"

[dev-dependencies]
tempfile = "3.27.0"
