[package]
name = "caliberate-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.1"
time = { version = "0.3.47", features = ["formatting"] }
