[package]
name = "caliberate-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
caliberate-assets = { path = "../assets" }
caliberate-conversion = { path = "../conversion" }
caliberate-core = { path = "../core" }
caliberate-db = { path = "../db" }
caliberate-device = { path = "../device" }
caliberate-library = { path = "../library" }
caliberate-metadata = { path = "../metadata" }
eframe = "0.34.1"
egui_extras = "0.34.1"
image = "0.25.5"
pulldown-cmark = "0.12.2"
time = "0.3.41"
tracing = "0.1.44"
uuid = { version = "1.18.1", features = ["v4"] }
walkdir = "2.5.0"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.27.0"
