[package]
name = "caliberate-metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
caliberate-core = { path = "../core" }
caliberate-zpaq = { path = "../zpaq" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sevenz-rust2 = "0.20.2"
tempfile = "3.27.0"
tracing = "0.1.44"
unrar = "0.5.8"
zip = "8.4.0"
