[package]
name = "caliberate-server"
version = "0.1.0"
edition = "2024"

[dependencies]
caliberate-core = { path = "../core" }
caliberate-db = { path = "../db" }
axum = "0.8.8"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "signal", "time", "fs"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tracing = "0.1.44"

[dev-dependencies]
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = "1.7.0"
tempfile = "3.27.0"
tower = "0.5.2"
